[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/World/tree-02-nva.png" type="Texture" id=1]
[ext_resource path="res://Script/small-tree.gd" type="Script" id=2]
[ext_resource path="res://Scene/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Shadows/big-shadow.png" type="Texture" id=4]
[ext_resource path="res://Scene/Z_Index.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.16079
height = 5.9127

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.25948
height = 14.1578

[node name="small-tree" type="StaticBody2D"]
light_mask = 0
collision_layer = 2147483649
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6

[node name="shadowTree" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.537255 )
show_behind_parent = true
position = Vector2( 0.6, 24 )
scale = Vector2( 0.7, 0.4 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 14 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 2147516936
collision_mask = 2147483648

[node name="CollisionShape2D" parent="HurtBox" index="0"]
visible = false
position = Vector2( 0, 10 )
shape = SubResource( 2 )

[node name="Hide_1" type="Position2D" parent="."]
position = Vector2( 0.917702, -8.09246 )

[node name="Z_Index" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 0.488102, 0.208046 )

[node name="CollisionPolygon2D" parent="Z_Index" index="0"]
polygon = PoolVector2Array( -4.55462, 4.93599, 3.78813, 5.01942, 3.37099, -3.49019, 0.117321, -18.4237, -4.05405, -3.32333 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_exited" from="HurtBox" to="." method="_on_HurtBox_area_exited"]

[editable path="HurtBox"]
[editable path="Z_Index"]
